// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelSelectorInput Allows to remove labels 1`] = `
Array [
  Array [
    Array [
      "c=d",
    ],
  ],
]
`;

exports[`LabelSelectorInput Fires onChange when valid label is entered 1`] = `
Array [
  Array [
    Array [
      "abc=def",
    ],
  ],
]
`;

exports[`LabelSelectorInput Renders labels 1`] = `
Array [
  <Label
    key="a"
    onClick={[Function]}
    text="a"
  />,
  <Label
    key="b"
    onClick={[Function]}
    text="b"
  />,
]
`;

exports[`LabelSelectorInput Renders readonly labels 1`] = `
Array [
  <NonRemovableLabel
    key="a"
    text="a"
  />,
  <NonRemovableLabel
    key="b"
    text="b"
  />,
]
`;
